--- a/app/src/main/res/layout/new_connection.xml
+++ b/app/src/main/res/layout/new_connection.xml
@@ -121,7 +121,7 @@
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="@string/host" />
+                    android:text="@string/password" />
 
                 <EditText
                     android:id="@+id/inputConnPassword"
