--- a/app/src/main/res/layout/ftp_list.xml
+++ b/app/src/main/res/layout/ftp_list.xml
@@ -1,21 +1,36 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
     android:padding="10dp">
 
-    <TextView
-        android:id="@+id/connection_name"
+    <LinearLayout
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="conn"
-        android:textSize="20sp" />
+        android:layout_height="fill_parent"
+        android:orientation="vertical"
+        android:gravity="center_vertical">
+        <TextView
+            android:id="@+id/connection_name"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="conn"
+            android:textSize="20sp" />
 
-    <TextView
-        android:id="@+id/connection_host_port"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Olá mundo" />
+        <TextView
+            android:id="@+id/connection_host_port"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Olá mundo" />
+    </LinearLayout>
 
-</LinearLayout>
+    <ImageView
+        android:id="@+id/menu_list"
+        android:layout_width="30dp"
+        android:layout_height="30dp"
+        android:focusable="true"
+        android:layout_alignParentRight="true"
+        android:layout_centerVertical="true"
+        android:src="@drawable/ic_more_vert_white_48dp"/>
+
+</RelativeLayout>
