--- a/app/src/main/res/menu/list_connection_menu.xml
+++ b/app/src/main/res/menu/list_connection_menu.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
     <item
-        android:id="@+id/list_connection"
+        android:id="@+id/edit_connection"
         android:title="@string/edit" />
 
     <item
